second homework + first

--- a/homework1/task1.html
+++ b/homework1/task1.html
@@ -8,15 +8,15 @@
 <script>
     while (true) {
         var a, b, c;
-        a = prompt("enter a number");
+        a = +prompt("enter a number");
         if (!a) {
             break;
         }
-        b = prompt("enter a number");
+        b = +prompt("enter a number");
         if (!b) {
             break;
         }
-        c = prompt("enter a number");
+        c = +prompt("enter a number");
         if (!c) {
             break;
         }
