--- a/homework1/task3.html
+++ b/homework1/task3.html
@@ -6,48 +6,43 @@
 </head>
 <body>
 <script>
-    while (true) {
-        var number = prompt("введите число от 0 до 9");
-        if (!number) {
-            break;
-        }
+
+        var number = parseInt(prompt("введите число от 0 до 9"));
+
         if ((number < 0) || (number > 9)) {
             alert("вы выбрали число, которое не находится в диапазоне от 0 до 9");
         }
-        if (number == 0) {
+        if (number === 0) {
             alert("вы выбрали число ноль");
         }
-        if (number == 1) {
+        if (number === 1) {
             alert("вы выбрали число один");
         }
-        if (number == 2) {
+        if (number === 2) {
             alert("вы выбрали число два");
         }
-        if (number == 3) {
+        if (number === 3) {
             alert("вы выбрали число три");
         }
-        if (number == 4) {
+        if (number === 4) {
             alert("вы выбрали число четыре");
         }
-        if (number == 5) {
+        if (number === 5) {
             alert("вы выбрали число пять");
         }
-        if (number == 6) {
+        if (number === 6) {
             alert("вы выбрали число шесть");
         }
-        if (number == 7) {
+        if (number === 7) {
             alert("вы выбрали число семь");
         }
-        if (number == 8) {
+        if (number === 8) {
             alert("вы выбрали число восемь");
         }
-        if (number == 9) {
+        if (number === 9) {
             alert("вы выбрали число девять");
         }
-        if (number.match(/^[-\+]?\d+/) === null) {
-            alert("вы ввели не число");
-        }
-                }
+
 </script>
 </body>
 </html>
