--- a/homework1/task4.html
+++ b/homework1/task4.html
@@ -6,33 +6,29 @@
 </head>
 <body>
 <script>
-    while (true) {
-        var number = prompt("введите число от 1 до 5");
-        if (!number) {
-            break;
-        }
-        if (number == 1) {
+
+        var number = parseInt(prompt("введите число от 1 до 5"));
+
+        if (number === 1) {
             alert("плохо");
         }
-        if (number == 2) {
+        if (number === 2) {
             alert("неудовлетворительно");
         }
-        if (number == 3) {
+        if (number === 3) {
             alert("удовлетворительно");
         }
-        if (number == 4) {
+        if (number === 4) {
             alert("хорошо");
         }
-        if (number == 5) {
+        if (number === 5) {
             alert("отлично");
         }
         if ((number < 1) || (number > 5)) {
             alert("вы выбрали неверное число");
         }
-        if (number.match(/^[-\+]?\d+/) === null) {
-            alert("вы ввели не число");
-        }
-    }
+
+
 </script>
 </body>
 </html>
