убраны лишние скобки

--- a/homework1/task3.html
+++ b/homework1/task3.html
@@ -9,7 +9,7 @@
 
         var number = parseInt(prompt("введите число от 0 до 9"));
 
-        if ((number < 0) || (number > 9)) {
+        if (number < 0 || number > 9) {
             alert("вы выбрали число, которое не находится в диапазоне от 0 до 9");
         }
         if (number === 0) {
