--- a/homework1/task2.html
+++ b/homework1/task2.html
@@ -9,28 +9,28 @@
 
          var number = parseInt(prompt("введите число в диапазоне от -999 до 999"));
 
-         if ((number > 999) || (number < -999)) {
+         if (number > 999 || number < -999) {
              alert("число не находится в диапазоне от -999 до 999");
          }
          if (number === 0) {
              alert("нулевое число");
          }
-         if ((number < -99) && (number >= -999)) {
+         if (number < -99 && number >= -999) {
              alert("отрицательное трехзначное число");
          }
-         if ((number <= -10) && (number >= -99 )) {
+         if (number <= -10 && number >= -99 ) {
              alert("отрицательное двузначное число");
          }
-         if ((number < 0) && (number >= -9 )) {
+         if (number < 0 && number >= -9 ) {
              alert("отрицательное однозначное число");
          }
-         if ((number > 0) && (number <= 9 )) {
+         if (number > 0 && number <= 9 ) {
              alert("положительное однозначное число");
          }
-         if ((number > 9) && (number <= 99 )) {
+         if (number > 9 && number <= 99 ) {
              alert("положительное двузначное число");
          }
-         if ((number > 99) && (number <= 999 )) {
+         if (number > 99 && number <= 999 ) {
              alert("положительное трехзначное число");
          }
 
