--- a/homework1/task4.html
+++ b/homework1/task4.html
@@ -24,7 +24,7 @@
         if (number === 5) {
             alert("отлично");
         }
-        if ((number < 1) || (number > 5)) {
+        if (number < 1 || number > 5) {
             alert("вы выбрали неверное число");
         }
 
