--- a/homework2/task2.html
+++ b/homework2/task2.html
@@ -6,19 +6,40 @@
 </head>
 <body>
 <script>
-    var x, y, z;
-    alert("сейчас мы узнаем является ли ваш треугольник прямоугольным");
-    x = +prompt("введите значение координаты x");
-    y = +prompt("введите значение координаты y");
-    z = +prompt("введите значение координаты z");
-    x = Math.pow(x,2);
-    y = Math.pow(y,2);
-    z = Math.pow(z,2);
-    if (x + y === z || x + z === y || y + z === x) {
-       alert("ваш треугольник прямоугольный");
-    } else {
-        alert("ваш треугольник не прямоугольный");
+    //извиняюсь за такое извращение, но главное, что все работает... вроде =)))
+    //я добавил Math.round потому что иногда получалось не целое число, не знаю почему
+    //рабочие координаты были А(3;1;2), B(1;2;-1), C(-2;2;1)
+    //так вот длина bc получалась 12.999999998, в то время как ac и bc получались нормальными целыми числами
+
+    var a1 = +prompt("введите координату Х первой вершины треугольника");
+    var a2 = +prompt("введите координату Y первой вершины треугольника");
+    var a3 = +prompt("введите координату Z первой вершины треугольника");
+
+    var b1 = +prompt("введите координату Х второй вершины треугольника");
+    var b2 = +prompt("введите координату Y второй вершины треугольника");
+    var b3 = +prompt("введите координату Z второй вершины треугольника");
+
+    var c1 = +prompt("введите координату Х третьей вершины треугольника");
+    var c2 = +prompt("введите координату Y третьей вершины треугольника");
+    var c3 = +prompt("введите координату Z третьей вершины треугольника");
+
+    var ab = Math.round(Math.pow(Math.sqrt(Math.pow((b1 - a1),2) + Math.pow((b2 - a2),2) + Math.pow((b3 - a3),2)),2));
+    var ac = Math.round(Math.pow(Math.sqrt(Math.pow((c1 - a1),2) + Math.pow((c2 - a2),2) + Math.pow((c3 - a3),2)),2));
+    var bc = Math.round(Math.pow(Math.sqrt(Math.pow((c1 - b1),2) + Math.pow((c2 - b2),2) + Math.pow((c3 - b3),2)),2));
+
+    if (ab + bc === ac ){
+        alert("Треугольник прямоугольный");
     }
+    else if (ab + ac === bc ){
+        alert("Треугольник прямоугольный");
+    }
+    else if (ac + bc === ab ){
+        alert("Треугольник прямоугольный");
+    } else {
+        alert("Треугольник не прямоугольный");
+    }
+
+
 </script>
 </body>
 </html>
