--- a/homework3/task4.html
+++ b/homework3/task4.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     var str = prompt("Введите пароль (должен содержать буквы верхнего и нижнего регистра + минимум 2 цифры + минимум 1 спецсимвол)");
-    var reg =  /^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]{2,})(?=.*?[#?!@$%^&*-]).{9,}$/;
+    var reg =  /^(?=.*?[A-Z])(?=.*?[a-z])(?=(.*\d){2})(?=.*?[#?!@$%^&*-]).{9,}$/;
     alert(reg.test(str));
 </script>
 </body>
